--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Project"
-author: "Insert Name Here"
+author: "Angel Morataya"
 subtitle: "Investigation into Chicago taxis"
 echo: false
 bibliography: references.bib
